<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/colored_content"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="24dp">

	<Button
		android:id="@+id/action_send_destination_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/action_send_destination" />

	<Button
		android:id="@+id/application_market_destination_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/application_market_destination_button" />

	<Button
		android:id="@+id/app_setting_destination_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_setting_destination_button" />

	<Button
		android:id="@+id/network_setting_destination_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/network_setting_destination_button" />

	<Button
		android:id="@+id/phone_destination_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/phone_destination_button" />

</LinearLayout>